# Diary

./: Cargo.toml  README.md  flake.nix
src/: add.rs  build.rs  config.rs  edit.rs  main.rs  remove.rs  util.rs  view.rs
