[package]
name = "diary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.6", features = ["derive", "env"] }
eyre = "0.6.12"
tempfile = "3.10.1"
tokio = { version = "1.38.0", features = ["full"] }
